testing/tests/into/incomplete.stderr
error[E0063]: missing field `optional` in initializer of `IntoStruct`
 --> tests/into/incomplete.rs:5:15
  |
5 | #[struct_into("crate::IntoStruct")]
  |               ^^^^^^^^^^^^^^^^^^^ missing `optional`
